
2023-07-01  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l: add check for reserved word FUNCTION, add missing
	  word value for not reserved SUPPRESS and SEND

2023-06-30  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_function_prototypes): generate plain "extern"
	  instead of "COB_EXT_IMPORT" again, as the second only works with
	  libraries, not with object files / sources

2023-06-25  Chuck Haatvedt  <chuck.haatvedt+cobol@gmail.com>

	FR #439: dialect option to support justify for IBM compatibility
	* config.def: new dialect configuration option init-justify
	* codegen.c (output_initialize_to_value): added support for right
	  justification when cb_initial_justify is on

2023-06-23  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* pplex.l (get_word): fix an overflow with words exceeding the
	  maximal size COB_MAX_WORDLEN
	* pplex.l (is_condition_directive_clause,
	  next_word_is_comment_paragraph_name): decrease stack storage
	  and optimize string comparisons

2023-06-22  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* parser.y (setup_program, setup_default_collation)
	  (program_init_without_program_id): properly record default collating
	  sequence if required via -fdefault-colseq
	* tree.c (cb_build_binary_op), typeck.c (cb_build_cond_default): inhibit
	  -ffast-compare and -fconstant-folding for programs with a non-native
	  collating sequence

2023-06-20  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	FR #437: dialect option to limit bound checks for ODO to maximum
	* config.def, config.c (cb_config_entry), cobc.h (cb_sub_check),
	  typeck.c (cb_build_identifier): new dialect configuration option
	  subscript-check to limit bound checks for ODO items

2023-06-20  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	Bugs #875 V IS ZERO AND, #880 error compiling abbreviated conditions
	* typeck.c (cb_build_expr): additional generate 'invalid conditional